add render profile in add task

--- a/add_task.html
+++ b/add_task.html
@@ -42,6 +42,9 @@
                                             <option value="" disabled selected>Select contacts to assign</option>
                                         </select>
                                     </div>
+                                    <div id="assigned_contact_profiles">
+                                        
+                                    </div>
                                 </label>
                             </div>
                             <div class="break_line"></div>
