--- a/add_task.html
+++ b/add_task.html
@@ -26,7 +26,7 @@
                     <div class="main_content">
                         <h1>Add Task</h1>
                         <div class="form_content">
-                            <div>
+                            <div class="sub_container">
                                 <label for="title_input">
                                     <h2>Title<span class="required_char">*</span></h2>
                                     <input required type="text" id="title_input" class="input" placeholder="Enter a title">
@@ -48,7 +48,7 @@
                                 </label>
                             </div>
                             <div class="break_line"></div>
-                            <div>
+                            <div class="sub_container">
                                 <label for="date_input">
                                     <h2>Due date<span class="required_char">*</span></h2>
                                     <input required type="text" placeholder="dd/mm/yyyy" id="date_input" onfocus="(this.type='date')" class="input">
