--- a/contacts.html
+++ b/contacts.html
@@ -209,5 +209,8 @@
         </div>
       </div>
     </div>
+    <div class="add_contact_animation">
+      <img id="succesfully_created" src="./assets/img/contacts/ContactSuccesfullyCreated.png" alt="">
+    </div>
   </body>
 </html>
