changed structure of html to center header

--- a/sign_up.html
+++ b/sign_up.html
@@ -134,10 +134,16 @@
         </form>
       </main>
 
-      <footer class="login_page_bottom">
+      <footer class="signup_page_bottom">
         <a href="./privacy_policy.html">Privacy Policy</a>
         <a href="./legal_notice.html">Legal notice</a>
       </footer>
+
+      <div class="signup_success" id="signup_success">
+        <div class="signup_container" id="signup_container">
+          <span class="signup_message">Contact successfully created</span>
+        </div>
+      </div>
     </section>
     <script src="./js/signup.js"></script>
   </body>
