--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <script src="./script.js"></script>
   </head>
   <body>
-    <!-- <section id="landing_page" class="landing_page modal">
+    <section id="landing_page" class="landing_page modal">
       <div class="landing_page_desktop">
         <img src="./assets/img/logoStartseite.png" alt="Logo Desktop" />
       </div>
       <div class="landing_page_mobile">
         <img src="./assets/img/landing_page/logo_hell.png" alt="Logo Mobile" />
       </div>
-    </section> -->
+    </section>
 
     <!-- --- HEAD --- -->
     <section class="login_page_container">
