--- a/sign_up.html
+++ b/sign_up.html
@@ -96,6 +96,7 @@
               <div id="passwordConfirmContainer" class="signup_input">
                 <input
                   onchange="checkPasswords()"
+                  onkeyup="toggleConfirmIcon()"
                   type="password"
                   id="passwordConfirm"
                   placeholder="Confirm Password"
