--- a/board.html
+++ b/board.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./assets/templates/header/header.css" />
     <link rel="stylesheet" href="./assets/templates/sidebar/sidebar.css" />
     <link rel="stylesheet" href="./assets/css/board.css" />
+    <link rel="stylesheet" href="./assets/css/mobile_board.css">
     <link
       rel="stylesheet"
       href="./assets/templates/add_task/add_task_template.css"
