--- a/contacts.html
+++ b/contacts.html
@@ -111,6 +111,7 @@
             </div>
           </section> -->
         </div>
+        </div>
         <div class="add_contact_overlay_bg">
           <div id="addContactOverlay" class="add_contact_overlay d_none">
             <section class="contact_overlay_add_contact_card">
@@ -203,7 +204,7 @@
               </div>
             </section>
           </div>
-        </div>
+
         <div class="add_contact_overlay_bg">
           <div id="editContactOverlay" class="add_contact_overlay d_none"></div>
         </div>
@@ -214,5 +215,6 @@
         <span class="success_message">Contact successfully created</span>
       </div>
     </div>
+    <div class="add_contact_mobile" onclick="openOverlayAddContact()"></div>
   </body>
 </html>
