added summary greeting animation

--- a/summary.html
+++ b/summary.html
@@ -113,6 +113,12 @@
           <span class="summary_greeting_text" id="greeting"></span>
           <div class="user_name" id="user_name_greeting"></div>
         </div>
+        
+        <div class="animation_modal">
+          <span class="modal_greeting_text" id="modal_greeting"></span>
+          <div class="modal_name" id="modal_user_name_greeting"></div>
+        </div>
+
       </div>
     </div>
   </body>
