--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <script src="./script.js"></script>
   </head>
   <body>
+
+    <!-- LANDING PAGE ANIMATION -->
     <section id="landing_page" class="landing_page modal">
       <div class="landing_page_desktop">
         <img src="./assets/img/logoStartseite.png" alt="Logo Desktop" />
