finalising summary html, css and js

--- a/summary.html
+++ b/summary.html
@@ -28,9 +28,6 @@
         <div class="summary_headline_stroke">
           <img src="./assets/img/img_summary/strokeSummaryhead.png" alt="" />
         </div>
-        <!-- <svg xmlns="http://www.w3.org/2000/svg" width="4" height="63" viewBox="0 0 4 63" fill="none">
-                <path d="M2 2V61" stroke="#29ABE2" stroke-width="3" stroke-linecap="round"/>
-                </svg> -->
         <span class="summary_headline_text">Key Metrics at a Glance</span>
         <div class="summary_headline_stroke_mobile">
           <img src="./assets/img/img_summary/strokeSummaryhead.png" alt="" />
@@ -72,12 +69,11 @@
                       src="./assets/img/img_summary/strokeSummaryUrgent.png"
                       alt=""
                     />
-                    <!-- <svg xmlns="http://www.w3.org/2000/svg" width="2" height="106" viewBox="0 0 2 106" fill="none">
-                                        <path d="M1 1.98828V104.011" stroke="#D1D1D1" stroke-width="2" stroke-linecap="round"/>
-                                    </svg> -->
                   </div>
                   <div>
-                    <div class="summary_date" id="upcoming_deadline">October 16, 2022</div>
+                    <div class="summary_date" id="upcoming_deadline">
+                      October 16, 2022
+                    </div>
                     <span class="summary_urgent_text">Upcoming Deadline</span>
                   </div>
                 </div>
@@ -113,12 +109,11 @@
           <span class="summary_greeting_text" id="greeting"></span>
           <div class="user_name" id="user_name_greeting"></div>
         </div>
-        
+
         <div class="animation_modal">
           <span class="modal_greeting_text" id="modal_greeting"></span>
           <div class="modal_name" id="modal_user_name_greeting"></div>
         </div>
-
       </div>
     </div>
   </body>
