--- a/add_task.html
+++ b/add_task.html
@@ -86,14 +86,16 @@
                                 </div>
                             </div>
                         </div>
-                        <section class="add_task_footer">
+                        <section class="add_task_footer_container">
+                        <div class="add_task_footer">
                             <div>
-                                <p><span class="required_char">*</span>This field is required</p>
+                                <p class="required_char_container"><span class="required_char">*</span>This field is required</p>
                             </div>
                             <div class="form_button_container">
                                 <button class="form_button_clear" id="clear_button" onclick="clear()"><span>Clear &#10006;</span></button>
                                 <button class="form_button_create" type="submit"><span>Create Task</span> <img src="./assets/img/add_task/check.png" alt="create task button"></button>
                             </div>
+                        </div>
                         </section>
                         <div class="mobile_sidebar_container"></div>
                     </div>
