--- a/contacts.html
+++ b/contacts.html
@@ -35,85 +35,23 @@
         </div>
         <div class="contact_scrolls_div">
           <div id="userAccount"></div>
-          <!-- 
-            
-          <div class="contact_scrolls_card_small_onclick">
-            <img
-              class="contact_scrolls_card_small_img"
-              src="./assets/img/contacts/ProfilebadgeAM.png"
-              alt=""
-            />
-            <div class="contact_scrolls_card_small_contact">
-              <span class="contact_scrolls_card_small_onclick_name"
-                >Anton Mayer</span
-              >
-              <span class="contact_scrolls_card_small_onclick_email"
-                >antom@gemail.com</span
-              >
-            </div>
-          </div> -->
           <div id="contactScroll"></div>
         </div>
       </section>
 
-      <div class="contacts_right_side_flex">
+      <div class="contacts_right_side_flex d_none" id="contactInformationMobile">
         <section class="contacts_headline">
+          <img class="close_contact_mobile" id="closeArrow" onclick="closeContactInfoMobile()" src="./assets/img/contacts/arrow-left-line.png" alt="">
           <h1 class="contacts_headline_h1">Contacts</h1>
-          <img src="./assets/img/contacts/strokeBlue.png" alt="" />
+          <img class="stroke_blue_vertikal" src="./assets/img/contacts/strokeBlue.png" alt="" />
           <span class="contacts_headline_text">Better with a team</span>
+          <img class="stroke_blue_horizontal" src="./assets/img/contacts/strokeBlueHoriz.png" alt="">
         </section>
         <div id="contactInformation" class="d_none">
-          <!-- <section class="contacts_bigcard_container">
-            <div class="contacts_bigcard_contact_area">
-              <img
-                class="contacts_bigcard_img"
-                src="./assets/img/contacts/ProfilebadgeAM.png"
-                alt=""
-              />
-              <div class="contacts_bigcard_name_area">
-                <span class="contacts_bigcard_name">Anton Mayer</span>
-                <div class="contacts_bigcard_edit">
-                  <div class="edit_area">
-                    <img
-                      class="edit_area_img"
-                      src="./assets/img/contacts/edit.png"
-                      alt=""
-                    />
-                    <span class="edit_text">Edit</span>
-                  </div>
-                  <div class="edit_area">
-                    <img
-                      class="edit_area_img"
-                      src="./assets/img/contacts/delete.png"
-                      alt=""
-                    />
-                    <span class="edit_text">Delete</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <span class="contacts_bigcard_Information_text"
-              >Contact Information</span
-            >
-            <div class="contacts_bigcard_Information_email_phone">
-              <span class="contacts_bigcard_Information_email_phone_span"
-                >Email</span
-              >
-              <span class="contacts_bigcard_Information_email"
-                >anton@gmail.com</span
-              >
-              <span class="contacts_bigcard_Information_email_phone_span"
-                >Phone</span
-              >
-              <span class="contacts_bigcard_Information_phone"
-                >+49 1111 111 11 1</span
-              >
-            </div>
-          </section> -->
         </div>
         </div>
-        <div class="add_contact_overlay_bg">
-          <div id="addContactOverlay" class="add_contact_overlay d_none">
+        <div id="addContactOverlay" class="add_contact_overlay_bg d_none">
+          <div  class="add_contact_overlay">
             <section class="contact_overlay_add_contact_card">
               <div class="contact_overlay_add_contact_card_left">
                 <img
@@ -127,7 +65,7 @@
                     >Add contact</span
                   >
                   <span class="contact_overlay_add_contact_card_left_text"
-                    >Tasks are better with a team</span
+                    >Tasks are better with a team!</span
                   >
                   <img
                     class="contact_overlay_add_contact_card_left_stroke"
@@ -204,7 +142,7 @@
               </div>
             </section>
           </div>
-
+    </div>
         <div class="add_contact_overlay_bg">
           <div id="editContactOverlay" class="add_contact_overlay d_none"></div>
         </div>
@@ -215,6 +153,7 @@
         <span class="success_message">Contact successfully created</span>
       </div>
     </div>
-    <div class="add_contact_mobile" onclick="openOverlayAddContact()"></div>
+    <div class="add_contact_mobile" id="addContactMobile" onclick="openOverlayAddContact()"></div>
+    <div class="edit_contact_mobile d_none" id="editContactMobile">  </div>
   </body>
 </html>
