update contact responsive

--- a/contacts.html
+++ b/contacts.html
@@ -154,6 +154,8 @@
       </div>
     </div>
     <div class="add_contact_mobile" id="addContactMobile" onclick="openOverlayAddContact()"></div>
-    <div class="edit_contact_mobile d_none" id="editContactMobile">  </div>
+    <div class="edit_contact_mobile d_none" id="editContactMobile" onclick="editFunctionMobile()"></div>
+     
+    </div>
   </body>
 </html>
