--- a/board.html
+++ b/board.html
@@ -68,6 +68,7 @@
           </section>
           <section class="category_section" id="category_section"></section>
         </div>
+        <div class="mobile_sidebar_container"></div>
       </main>
     </div>
     
