--- a/board.html
+++ b/board.html
@@ -47,7 +47,7 @@
                 />
               </div>
               <button onclick="showAddTask()" class="add_task_button">
-                Add task <img src="./assets/img/board/add.png" />
+                <span>Add task</span> <img src="./assets/img/board/add.png" />
               </button>
             </div>
           </section>
