update contact infoME

--- a/contacts.html
+++ b/contacts.html
@@ -41,7 +41,7 @@
 
       <div class="contacts_right_side_flex d_none" id="contactInformationMobile">
         <section class="contacts_headline">
-          <img class="close_contact_mobile" id="closeArrow" onclick="closeContactInfoMobile()" src="./assets/img/contacts/arrow-left-line.png" alt="">
+          <img class="close_contact_mobile d_none" id="closeArrow" onclick="closeContactInfoMobile()" src="./assets/img/contacts/arrow-left-line.png" alt="">
           <h1 class="contacts_headline_h1">Contacts</h1>
           <img class="stroke_blue_vertikal" src="./assets/img/contacts/strokeBlue.png" alt="" />
           <span class="contacts_headline_text">Better with a team</span>
