--- a/board.html
+++ b/board.html
@@ -82,6 +82,7 @@
 
     <script src="./script.js"></script>
     <script src="./js/board/board.js"></script>
+    <script src="./js/board/boardEdit.js"></script>
     <script src="./js/board/generateBoard.js"></script>
     <script src="./js/header.js"></script>
     <script src="./js/add_task.js"></script>
