bug fix add task button

--- a/board.html
+++ b/board.html
@@ -19,6 +19,7 @@
       rel="stylesheet"
       href="./assets/templates/add_task/add_task_template.css"
     />
+    <link rel="stylesheet" href="./assets/templates/add_task/add_task_template_second.css">
     <link rel="stylesheet" href="./assets/css/overlay.css" />
   </head>
 
