add category button if window less 1000

--- a/board.html
+++ b/board.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="./assets/css/overlay.css" />
   </head>
 
-  <body onload="init(); initBoard();" onchange="changeAddTaskButton()">
+  <body onload="init(); initBoard();">
     <div class="container">
       <div class="side_bar_position_container">
         <div w3-include-html="./assets/templates/sidebar/sidebar.html"></div>
