add task css outsourced in other file

--- a/add_task.html
+++ b/add_task.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./assets/fonts/fonts.css">
     <link rel="stylesheet" href="./assets/css/add_task.css">
     <link rel="stylesheet" href="./assets/templates/sidebar/sidebar.css">
+    <link rel="stylesheet" href="./assets/css/add_task_second.css">
     <link rel="stylesheet" href="./assets/templates/header/header.css">
 </head>
 <body onload="init(); initAddTask()">
