--- a/contacts.html
+++ b/contacts.html
@@ -16,7 +16,8 @@
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./assets/templates/header/header.css" />
     <link rel="stylesheet" href="./assets/templates/sidebar/sidebar.css" />
-    <script src="./js/contacts.js"></script>
+    <script src="./js/contacts/contacts.js"></script>
+    <script src="./js/contacts/generateHtml.js"></script>
   </head>
   <body onload="initContact()">
     <div w3-include-html="./assets/templates/header/header.html"></div>
