fix search function in edit task

--- a/add_task.html
+++ b/add_task.html
@@ -116,6 +116,7 @@
     
     <script src="./script.js"></script>
     <script src="./js/add_task.js"></script>
+    <script src="./js/generateAddTask.js"></script>
     <script src="./js/header.js"></script>
 </body>
 </html
