--- a/board.html
+++ b/board.html
@@ -87,5 +87,6 @@
     <script src="./js/board/generateBoard.js"></script>
     <script src="./js/header.js"></script>
     <script src="./js/add_task.js"></script>
+    <script src="./js/generateAddTask.js"></script>
   </body>
 </html>
