added jsdoc in add_task

--- a/board.html
+++ b/board.html
@@ -86,6 +86,7 @@
     <script src="./js/board/boardEdit.js"></script>
     <script src="./js/board/generateBoard.js"></script>
     <script src="./js/header.js"></script>
+    <script src="./js/add_task_contact.js"></script>
     <script src="./js/add_task.js"></script>
     <script src="./js/generateAddTask.js"></script>
   </body>
