--- a/add_task.html
+++ b/add_task.html
@@ -115,6 +115,7 @@
     
     
     <script src="./script.js"></script>
+    <script src="./js/add_task_contact.js"></script>
     <script src="./js/add_task.js"></script>
     <script src="./js/generateAddTask.js"></script>
     <script src="./js/header.js"></script>
