--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
     <script src="./script.js"></script>
   </head>
   <body>
-    <section id="landing_page" class="landing_page modal">
+    <section id="landing_page" class="modal">
       <div class="landing_page_desktop">
-        <img src="./assets/img/logoStartseite.png" alt="Logo Desktop" />
+        <img class="landing_img1" src="./assets/img/landing_page/blue_dot_desktop.png" alt="Logo Desktop" />
+        <img class="landing_img2" src="./assets/img/landing_page/logo_start_desktop.png" alt="Logo Desktop" />
       </div>
       <div class="landing_page_mobile">
         <img src="./assets/img/landing_page/logo_hell.png" alt="Logo Mobile" />
