--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
   <body>
     <section id="landing_page" class="modal">
       <div class="landing_page_desktop">
-        <img class="landing_img1" src="./assets/img/landing_page/blue_dot_desktop.png" alt="Logo Desktop" />
-        <img class="landing_img2" src="./assets/img/landing_page/logo_start_desktop.png" alt="Logo Desktop" />
+        <img class="desktop_landing_img1" src="./assets/img/landing_page/blue_dot_desktop.png" alt="Logo Desktop" />
+        <img class="desktop_landing_img2" src="./assets/img/landing_page/logo_start_desktop.png" alt="Logo Desktop" />
       </div>
       <div class="landing_page_mobile">
-        <img src="./assets/img/landing_page/logo_hell.png" alt="Logo Mobile" />
+        <div class="mobile_landing_container">
+          <img class="mobile_landing_img1" src="./assets/img/landing_page/blue_dot_mobile.png" alt="Logo Mobile" />
+          <img class="mobile_landing_img2" src="./assets/img/landing_page/logo_start_mobile.png" alt="Logo Mobile" />
+        </div>
       </div>
     </section>
 
